# Tool_Reup_Douyin

./: .gitattributes  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AI_BUGFIX_WORKFLOW.md  CODEBASE_MAP.md  ERROR_TAXONOMY.md  GOLDEN_SEMANTIC_DATASET.md  KNOWN_LIMITATIONS.md  PROJECT_PROFILES.md  RELEASE_CHECKLIST.md  REVIEW_REASON_CODES.md  SEMANTIC_QC_SPEC.md  roadmap.md
installer/: app.iss
scripts/: apply_project_profile.py  build_installer.ps1  build_pyinstaller.ps1  finalize_clean_machine_validation.py  finalize_contextual_sample.py  polish_contextual_fit_earth_depth_120s.py  polish_contextual_video_test_tq_120s.py  polish_contextual_wilderness_full.py  polish_fast_dialogue.py  prepare_clean_machine_validation.py  rerun_contextual_downstream.py  resolve_contextual_reviews_amazon_rainforest_120s.py  resolve_contextual_reviews_earth_depth_120s.py  resolve_contextual_reviews_indian_ocean_120s.py  resolve_contextual_reviews_shinchan_120s.py  resolve_contextual_reviews_video_test_tq_120s.py  resolve_contextual_reviews_wilderness_full.py  resume_contextual_v2_project.py  run_contextual_v2_headless.py  run_headless_pipeline.py  smoke_release_bundle.ps1  smoke_ui_bulk_review.py  smoke_ui_speaker_binding.py
tests/: test_app_main.py  test_asr_persistence.py  test_audio_mixdown.py  test_audio_narration_incremental.py  test_audio_voiceover_track.py  test_build_pyinstaller_script.py  test_core_ffmpeg.py  test_core_logging.py  test_exporting_presets.py  test_finalize_clean_machine_validation.py  test_media_ffprobe.py  (+32 more)
(+131 files in other folders)
