[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reup-video"
version = "0.1.0"
description = "Windows local desktop app for multilingual video translation and dubbing workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "PySide6>=6.8,<7",
  "pydantic>=2.9,<3",
  "httpx>=0.27,<1",
  "pysubs2>=1.7,<2",
  "python-mpv>=1.0,<2",
  "openai>=1.68,<2",
  "faster-whisper>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6,<7",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]
vietnamese_tts = [
  "vieneu>=1,<2",
]

[project.scripts]
reup-video = "app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
